--- a/第三场.md
+++ b/第三场.md
@@ -1,5 +1,6 @@
-#[A. Clam and Fish](https://ac.nowcoder.com/acm/contest/5668/A)
-签到。题意比较麻烦，注意桌子上只有饵料的时候也可以不拿，利用之前的饵料钓鱼
+## [A. Clam and Fish](https://ac.nowcoder.com/acm/contest/5668/A)
+
+签到。题意比较麻烦，注意桌子上只有饵料的时候也可以不拿，利用之前的饵料钓鱼。
 ```cpp
 #include <bits/stdc++.h>
 using namespace std;
@@ -21,10 +22,10 @@ int main() {
     }
 }
 ```
-#[B. Classical String Problem](https://ac.nowcoder.com/acm/contest/5668/B)
-## 题意
+## [B. Classical String Problem](https://ac.nowcoder.com/acm/contest/5668/B)
+### 题意
 两种操作，A x 代表输出字符串第x个字符，M x代表将字符串左移位/右移位x个位置。
-## 解题
+### 解题
 签到，本质是下标取模。注意由于字符串长度和询问组数比较多，所以变化量delta需要取模防止溢出。同时cin/cout可能超时。
 ```cpp
 #include <bits/stdc++.h>
@@ -46,7 +47,7 @@ int main() {
     }
 }
 ```
-#[C. Operation Love](https://ac.nowcoder.com/acm/problem/209385)
+## [C. Operation Love](https://ac.nowcoder.com/acm/problem/209385)
 根据固定的几何图形判断左右手。比赛时由于精度过高一直WA。思路就是先判断好四个关键点，之后再根据左手和右手底边到下一条边叉积的正负不同来进行判断。注意，精度1e-4可以通过，但是更高的精度将无法通过。
 ```cpp
 #include <bits/stdc++.h>
@@ -91,15 +92,15 @@ int main() {
     }
 }
 ```
-#[F. Fraction Construction Problem](https://ac.nowcoder.com/acm/problem/209388)
+## [F. Fraction Construction Problem](https://ac.nowcoder.com/acm/problem/209388)
 
-## 题意
+### 题意
 给定正整数 $a、 b$ ，$a, b \le 2 \times 10^6$
 求$c,d,e,f$，满足
 $\frac{c}{d}-\frac{e}{f}=\frac{a}{b}$
-## 数据范围
+### 数据范围
 $d < b， f < b， 1 \le c,e \le 4 \times 10^{12}$
-## 解题
+### 解题
 化简得$\frac{cf-de}{df}=\frac{a}{b}$
 首先若ab不互质，则可以轻松构造出一组解d=b/gcd(a,b), f=1
 ab互质，则将b分解为互质的两个数之积（不互质则ab不互质），之后根据exgcd求解方程，**注意符号的正负**，暴力卡过去。
@@ -165,10 +166,10 @@ int main() {
 	}
 }
 ```
-#[G. Operating on a Graph](https://ac.nowcoder.com/acm/contest/5668/G)
-## 题意
+## [G. Operating on a Graph](https://ac.nowcoder.com/acm/contest/5668/G)
+### 题意
 给一个 $n$ 个点的 Graph，第 i 个点一刚开始是第 $I$ 种颜色，接着有 k 次 操作，第 i 次操作有个参数 $o_i$ 代表颜色 $o_i$ 会侵略所有和自己相邻的颜色， 于是所有和 $o_i$ 相邻的颜色全都变成 $o_i$ (若已没有颜色 $o_i$ 已被侵略，则该次操作无效)，求最终每个点的颜色。
-## 解题
+### 解题
 并查集
 ```cpp
 #include <bits/stdc++.h>
@@ -221,7 +222,7 @@ int main() {
 	}
 }
 ```
-#[L. Problem L is the Only Lovely Problem](https://ac.nowcoder.com/acm/contest/5668/L)
+## [L. Problem L is the Only Lovely Problem](https://ac.nowcoder.com/acm/contest/5668/L)
 签到。判断字符串首是否有lovely，用了个新学的函数。
 ```cpp
 string :: find(string substring)
